--- a/client/src/app/+merchant/product/product-list.component.html
+++ b/client/src/app/+merchant/product/product-list.component.html
@@ -12,13 +12,16 @@
                             <form #form="ngForm">
                                 <h5>{{p.name}}</h5>
                                 <div class="row inline bbe9 pb10">
-                                    <div class="col-xs-6">
+                                    <div class="col-xs-12">
                                         <div class="gray9 font12 pt5">
                                             单价：<span class="green">￥<span class="font14 arial bold">{{p.unitPrice}}</span></span>
                                         </div>
                                     </div>
-                                    <div *ngIf="!p.infinite" class="col-xs-6">
-                                        <input type="number" class="unit-in-stock" [(ngModel)]="p.unitsInStock" name="unitsInStock">
+                                </div>
+                                <div class="row inline bbe9 pb10 pt10" *ngIf="!p.infinite">                                    
+                                    <div class="col-xs-12">
+                                         <span class="gray9 font12">数量：</span>
+                                         <input type="number" class="unit-in-stock" [(ngModel)]="p.unitsInStock" name="unitsInStock">
                                     </div>
                                 </div>
                                 <div class="row inline mt10">
