--- a/client/src/app/+customer/menu.component.html
+++ b/client/src/app/+customer/menu.component.html
@@ -13,7 +13,7 @@
         </a>
     </div>    
     <div class="col-xs-3 pt5 pb5 meun" (click)="menuClick('order')">
-        <a [routerLink]="['/customer/order']" [class.active]="isOrder" class="block black posr">
+        <a [routerLink]="['/customer/order/1']" [class.active]="isOrder" class="block black posr">
             <div class="icon m0"><i class="fa fa-cart-arrow-down fa-fw"></i></div>
             <div>订单</div>
         </a>
