--- a/client/src/app/+merchant/product/product-create.component.html
+++ b/client/src/app/+merchant/product/product-create.component.html
@@ -68,16 +68,17 @@
                         <label class="col-sm-2 form-control-label">状态</label>
                         <div class="col-sm-10">
                             <select class="form-control col-sm-10" formControlName="status">
-                          <option *ngFor="let s of status;" [value]="s">{{s}}</option>
-                        </select>
+                                <option *ngFor="let s of status;" [value]="s">{{s}}</option>
+                            </select>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-2 form-control-label">商品分类</label>
                         <div class="col-sm-10">
                             <select class="form-control col-sm-10" formControlName="category">
-                          <option *ngFor="let c of categorys;" [ngValue]="c">{{c.name}}</option>
-                        </select>
+                                 <option value='' ></option> 
+                                 <option *ngFor="let c of categorys;" [ngValue]="c">{{c.name}}</option>
+                            </select>
                         </div>
                     </div>
                     <div class="form-group submit">
