--- a/client/src/app/+merchant/modifyuser/modifyuser.component.html
+++ b/client/src/app/+merchant/modifyuser/modifyuser.component.html
@@ -49,6 +49,24 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12 p0 input-text-box input-text-box1">
+                        <div class="form-group p-l-20">
+                            <md-checkbox align="start" formControlName="takeByPhone">
+                                手机号码提货
+                            </md-checkbox>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 p0 input-text-box input-text-box1">
+                        <div class="form-group p-l-20">
+                            <md-checkbox align="start" formControlName="takeByPhoneSuffix">
+                                手机号码后四位提货
+                            </md-checkbox>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 p0 input-text-box input-text-box1">
                         <div class="form-group">
                             <label for="userName" class="col-xs-12">邮箱&nbsp;&nbsp;</label>
                             <div class="col-xs-12 p0 input-text-box">
