--- a/client/src/app/+customer/menu.component.html
+++ b/client/src/app/+customer/menu.component.html
@@ -6,16 +6,16 @@
             <div>首页</div>
         </a>
     </div>     
-    <div class="col-xs-3 pt5 pb5 meun" (click)="menuClick('cart')">
+    <div class="col-xs-3 pt5 pb5 meun order" (click)="menuClick('cart')">
         <a [routerLink]="['/customer/cart']" [class.active]="isCart" class="block black posr">
             <div class="icon m0"><i class="fa fa-shopping-cart fa-fw"></i></div>
-            <div>购物车</div>
+            <div>购物车<span class="cart-count" *ngIf="totalItem > 0">{{totalItem}}</span></div>
         </a>
     </div>    
-    <div class="col-xs-3 pt5 pb5 meun order" (click)="menuClick('order')">
+    <div class="col-xs-3 pt5 pb5 meun" (click)="menuClick('order')">
         <a [routerLink]="['/customer/order/1']" [class.active]="isOrder" class="block black posr">
             <div class="icon m0"><i class="fa fa-cart-arrow-down fa-fw"></i></div>
-            <div>订单<span class="cart-count1"></span></div>
+            <div>订单</div>
         </a>
     </div>    
     <div class="col-xs-3 pt5 pb5 meun" (click)="menuClick('my')">
