--- a/client/src/app/+customer/cart/cart-bill.component.css
+++ b/client/src/app/+customer/cart/cart-bill.component.css
@@ -160,6 +160,7 @@
     margin-top: 10px;
     margin-bottom: 50px;
     background-color: #fff;
+    height: 250px;
 }
 .good-ack-form button {
     float: right;
