--- a/client/src/app/+customer/portal/portal.component.css
+++ b/client/src/app/+customer/portal/portal.component.css
@@ -4,21 +4,13 @@
     outline: 0;
     margin-bottom: 50px;
 }
-.table-btns{
-    position: relative;
-    height: 50px;
+
+.portal-container md-nav-list a[md-list-item] [md-list-icon] {
+    width: 38px;
+    height: 38px;
+    font-size: 1.5em;
 }
-.table-btns button{
-    position: absolute;
-    right: 10px;  
-    top:10px;
-}
-.row {
-    display: block;
-}
-md-card {
-    margin: 10px;
-}
-.demo-secondary-text {
+
+.secondary-text {
   color: rgba(0, 0, 0, 0.54);
 }
