--- a/client/src/app/+customer/product/product.component.html
+++ b/client/src/app/+customer/product/product.component.html
@@ -6,16 +6,17 @@
         </div>
         <div class="card-block buy-price">
             <div class="price">
-                <strong class="strong-color">14.9</strong>
+                <strong class="strong-color">{{product.unitPrice}}</strong>
                 <span class="strong-color">元</span>
             </div>
-            <button md-raised-button color="warn" [disabled]="cartTakeTime.length === 0 || (!product.infinite && product.unitsInStock === 0)" (click)="addCart(product)">加入购物车</button>
+            <button md-raised-button color="warn" [disabled]="cartTakeTime.length === 0 || (!product.infinite && product.unitsInStock === 0)"
+                (click)="addCart(product)">加入购物车</button>
         </div>
         <div class="card-block stock-info">
             <div class="card-text"><span class="text-muted">商品库存：</span><span>{{getStockDescription()}}</span></div>
             <div class="card-text merchant-open">营业时间：</div>
-            <div class="form-group text-danger" *ngIf="cartTakeTime.length === 0">
-                <span class="col-xs-12 form-control-label order-error">购买时间超过商家当天营业时间</span>
+            <div class="form-group text-danger" *ngIf="nextDay">
+                <span class="col-xs-12 form-control-label order-error">超过商家当天营业时间,订购明天！</span>
             </div>
             <div class="card-text merchant-time" *ngFor="let cct of cartTakeTime">{{cct.desc}}</div>
         </div>
