--- a/client/src/app/+customer/cart/cart.component.css
+++ b/client/src/app/+customer/cart/cart.component.css
@@ -13,7 +13,7 @@
     margin-bottom: 30px;
     background-color: #fff;
 }
-.cart-card::last-child {
+.cart-card:last-child {
     margin-bottom: 50px;
 }
 .merchant-info {
