--- a/client/src/app/+customer/portal/portal.component.css
+++ b/client/src/app/+customer/portal/portal.component.css
@@ -1,8 +1,12 @@
 .portal-container {
-    font: 12px/1.5 "Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB",\5FAE\8F6F\96C5\9ED1,tahoma,simsun,sans-serif;
-    color: #333;
-    outline: 0;
-    margin-bottom: 50px;
+    top: 0;
+    left: 0px;
+    right: 0px;
+    bottom: 45px;
+    margin-left: 0;
+    margin-right: 0;    
+    position: absolute;
+    overflow: auto;
 }
 
 .portal-container md-nav-list a[md-list-item] [md-list-icon] {
