--- a/client/src/app/+customer/cart/cart-bill.component.html
+++ b/client/src/app/+customer/cart/cart-bill.component.html
@@ -56,19 +56,21 @@
             <form class="good-ack-form" [formGroup]="form" (ngSubmit)="onSubmit()">
                 <div class="form-group">
                     <label class="col-sm-2 form-control-label">取货时间</label>
+                    <div class="form-group text-danger" *ngIf="nextDay">
+                        <span class="col-xs-12 form-control-label order-error">购买时间超过商家当天营业时间,将自动排期到第二天相同时间段</span>
+                    </div>
                     <div class="col-sm-10">
-                        <select class="form-control col-sm-10" formControlName="takeTimeRange">
-                          <option value='' ></option> 
-                          <option *ngFor="let ctt of cartTakeTime;" [ngValue]="ctt">{{ctt.desc}}</option>
-                        </select>
+                        <md-radio-group formControlName="takeTimeRange">
+                            <md-radio-button *ngFor="let ctt of cartTakeTime" [value]="ctt">
+                                {{ctt.desc}}
+                            </md-radio-button>
+                        </md-radio-group>
                     </div>
                 </div>
                 <div class="form-group" *ngIf="orderResult && !orderResult.result">
                     <span class="col-xs-12 form-control-label order-error">{{orderResult.error}}</span>
                 </div>
-                <div class="form-group text-danger" *ngIf="nextDay">
-                    <span class="col-xs-12 form-control-label order-error">购买时间超过商家当天营业时间,请选购下一天</span>
-                </div>
+
                 <button md-raised-button color="warn" [disabled]="cartTakeTime.length === 0 || !form.valid">提交订单</button>
             </form>
 
