--- a/client/src/app/+customer/merchant/merchant.component.css
+++ b/client/src/app/+customer/merchant/merchant.component.css
@@ -2,6 +2,12 @@
     font: 12px/1.5 "Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB",\5FAE\8F6F\96C5\9ED1,tahoma,simsun,sans-serif;
     color: #333;
     outline: 0;
+    top: 0;
+    left: 0px;
+    right: 0px;
+    bottom: 50px;
+    position: absolute;
+    overflow: auto;
 }
 .row {
   display: block;
