--- a/client/src/app/+customer/merchant/merchant.component.html
+++ b/client/src/app/+customer/merchant/merchant.component.html
@@ -1,4 +1,4 @@
-<div class="merchant-container">
+<div class="merchant-container container">
     <div class="query-panel">
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="form-group row">
