--- a/client/src/app/+customer/order/order.component.css
+++ b/client/src/app/+customer/order/order.component.css
@@ -2,9 +2,14 @@
     font: 12px/1.5 "Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB",\5FAE\8F6F\96C5\9ED1,tahoma,simsun,sans-serif;
     color: #333;
     outline: 0;
-    margin-bottom: 50px;
-    margin-right: -0.9375rem;
-    margin-left: -0.9375rem;
+    top: 0;
+    left: 0px;
+    right: 0px;
+    bottom: 50px;
+    margin-left: 0;
+    margin-right: 0;    
+    position: absolute;
+    overflow: auto;
 }
 .notification-body {
     padding: 0 0 0 3px;
