--- a/client/src/app/+customer/category/category.component.css
+++ b/client/src/app/+customer/category/category.component.css
@@ -1,6 +1,38 @@
-.list-container {
-    position: relative;
+.category-container {
+    top: 0;
+    left: 0px;
+    right: 0px;
+    bottom: 50px;
+    position: absolute;
+    overflow: auto;
 }
-.btn-group button {
-    margin-right:10px;
+
+a.list-group-item, button.list-group-item {
+    color: #555;
+}
+.list-group-item {
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+    margin-bottom: -1px;
+    border-radius: 0;
+    border-left: 0;
+    border-right: 0;
+    background-color: #fff;
+}
+a {
+    outline: none!important;
+}
+.media-box:first-child {
+    margin-top: 0;
+}
+.media-box, .media-box-body {
+    overflow: hidden;
+    zoom: 1;
+}
+.media-box-body .body-container{
+    padding-left: 5px;
+}
+.add-cart-btn {
+    background-color: #00BCD4!important;
 }
