--- a/client/src/app/+customer/product/product.component.html
+++ b/client/src/app/+customer/product/product.component.html
@@ -2,14 +2,14 @@
     <div class="card" *ngIf="product">
         <img *ngIf="product.imageSource" [src]="imagePreUrl+product.imageSource+'-md'">
         <div class="card-block product-name">
-            <h6 class="card-title">{{product.name}}</h6>
+            <h6 class="card-title">{{product.name}}<span class="offline" *ngIf="product.status === 1">（商品暂时下架）</span></h6>            
         </div>
         <div class="card-block buy-price">
             <div class="price">
                 <strong class="strong-color">{{product.unitPrice}}</strong>
                 <span class="strong-color">元</span>
             </div>
-            <button md-raised-button color="warn" [disabled]="cartTakeTime.length === 0 || (!product.infinite && product.unitsInStock === 0)"
+            <button md-raised-button color="warn" [disabled]="product.status === 1 || cartTakeTime.length === 0 || (!product.infinite && product.unitsInStock === 0)"
                 (click)="addCart(product)">加入购物车</button>
         </div>
         <div class="card-block stock-info">
