--- a/client/src/app/+customer/category/category.component.html
+++ b/client/src/app/+customer/category/category.component.html
@@ -1,39 +1,30 @@
-<div class="list-container row">
+<div class="category-container">
     <tabset class="varieties-shop">
         <tab *ngFor="let c of categorys;let i = index" [heading]="c.name" [active]="i === 0">
-            <div *ngFor="let p of c.products"  (click)="detail(p)">
-                <div class="product-edit-panel">
-                    <div class="clearfix">
-                        <div class="product-image-panel">
+
+            <div *ngFor="let p of c.products" class="list-group">
+                <a class="list-group-item" (click)="detail(p)">
+                    <div class="media-box">
+                        <div class="pull-left">
                             <img *ngIf="p.imageSource" [src]="imagePreUrl+p.imageSource+'-sm'" style="width:50px; height:50px;">
                             <img *ngIf="!p.imageSource" src="assets/img/orderpic_03.png" style="width:50px; height:50px;">
                         </div>
-                        <div class="product-info-panel">
-                            <h5>{{p.name}}</h5>
-                            <div class="row pb10">
-                                <div class="col-xs-12">
-                                    <div class="gray9 font12 pt5">
-                                        单价：<span class="green">￥<span class="font14 arial bold">{{p.unitPrice}}</span></span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row bbe9 pb10">
-                                <div class="col-xs-12">
-                                    <div class="gray9 font12 pt5">
-                                        {{p.infinite?'无限库存':'当前库存：'+p.unitsInStock}}
-                                    </div>
-                                </div>
+                        <div class="pull-right">
+                            <button md-mini-fab class="add-cart-btn1" color="warn" [disabled]="p.status === 1 ||(!p.infinite && p.unitsInStock === 0)" (click)="addCart($event,p)">
+                                <md-icon fontSet="fa" fontIcon="fa-plus" (click)="cancelConcern($event,m)"></md-icon>
+                            </button>
+                        </div>
+                        <div class="media-box-body clearfix">
+                            <div class="body-container">
+                                <p class="m0">{{p.name}}</p>
+                                <p class="m0 text-muted">
+                                    <small>单价：</small><small class="green">￥<small class="bold">{{p.unitPrice}}</small></small>
+                                </p>
                             </div>
                         </div>
                     </div>
-                    <div class="mt10 mb10 mf1 ml10 text-xs-center" *ngIf="p.status === 1">
-                        商品暂时下架
-                    </div>
-                    <div class="mt10 mb10 mf1 ml10 text-xs-center" *ngIf="p.status === 0">
-                        <button md-raised-button color="warn" [disabled]="!p.infinite && p.unitsInStock === 0" (click)="addCart($event,p)">加入购物车</button>
-                    </div>
-                </div>
-            </div>            
+                </a>
+            </div>
         </tab>
     </tabset>
     <ng2-toasty position="top-right"></ng2-toasty>
