--- a/client/src/app/+customer/portal/portal.component.css
+++ b/client/src/app/+customer/portal/portal.component.css
@@ -8,17 +8,23 @@
     position: absolute;
     overflow: auto;
 }
-
+.table-btns{
+    position: relative;
+    height: 50px;
+}
+.table-btns button{
+    position: absolute;
+    right: 10px;  
+    top:10px;
+}
 .portal-container md-nav-list a[md-list-item] [md-list-icon] {
     width: 38px;
     height: 38px;
     font-size: 1.5em;
 }
-
 .secondary-text {
   color: rgba(0, 0, 0, 0.54);
 }
-
 .cart-card:last-child {
     margin-bottom: 50px;
 }
