--- a/client/src/app/app.style.scss
+++ b/client/src/app/app.style.scss
@@ -126,6 +126,9 @@ a {
 .bg-none {
 	background: none
 }
+.m0 {
+    margin: 0!important;
+}
 .mf1 {
 	margin-left: 1px;
 }
@@ -292,10 +295,10 @@ a {
 }
 .varieties-shop .tab-content {    
     margin-left: 95px;
-	overflow-y: auto;
-    height: 100%;
-	padding-bottom: 90px;
-	border: none
+}
+.category-container .varieties-shop .tab-content {    
+    margin-left: 100px;
+	padding: 0;
 }
 .order-container .varieties-shop .tab-content {    
     margin-left: 90px;
