add merchant image

--- a/client/src/app/+customer/category/category.component.html
+++ b/client/src/app/+customer/category/category.component.html
@@ -10,8 +10,8 @@
                             <img *ngIf="!p.imageSource" src="assets/img/orderpic_03.png" style="width:50px; height:50px;">
                         </div>
                         <div class="pull-right">
-                            <button md-mini-fab class="add-cart-btn1" color="warn" [disabled]="p.status === 1 ||(!p.infinite && p.unitsInStock === 0)" (click)="addCart($event,p)">
-                                <md-icon fontSet="fa" fontIcon="fa-plus" (click)="cancelConcern($event,m)"></md-icon>
+                            <button md-mini-fab color="warn" [disabled]="p.status === 1 ||(!p.infinite && p.unitsInStock === 0)" (click)="addCart($event,p)">
+                                <md-icon fontSet="fa" fontIcon="fa-plus"></md-icon>
                             </button>
                         </div>
                         <div class="media-box-body clearfix">
