--- a/client/src/app/+customer/my/my.component.css
+++ b/client/src/app/+customer/my/my.component.css
@@ -3,6 +3,7 @@
 }
 .user-info {
   padding-top:5px;
+  margin: 0;
 }
 .profile-img {
     width: 75px;
@@ -24,7 +25,7 @@
 .one {
     color:#333;
     display: inline-block;
-    width: 22%;
+    width: 25%;
     z-index: 2;
     padding-top: 2px;
     vertical-align: top;
@@ -68,6 +69,7 @@
 ul {  
     list-style: none;  
     padding: 0px;
+    margin: 0;
 }   
 .menuitem {
     min-height: 120px;
