--- a/client/src/app/+merchant/my/my.component.html
+++ b/client/src/app/+merchant/my/my.component.html
@@ -50,6 +50,9 @@
             <a [routerLink]="['/modifypassword']"><i class="fa fa-key ui-menu-color02"></i><span>修改密码</span></a>
         </li>
         <li class="col-xs-4 col-sm-2 menuitem">
+            <a [routerLink]="['/merchant/modifyimage']"><i class="fa fa-odnoklassniki ui-menu-color04"></i><span>上传图像</span></a>
+        </li>
+        <li class="col-xs-4 col-sm-2 menuitem">
             <a [routerLink]="['/merchant/account']"><i class="fa fa-jpy ui-menu-color03"></i><span>我的帐户</span></a>
         </li>
         <li class="col-xs-4 col-sm-2 menuitem">
