--- a/client/src/app/+merchant/my/my.component.css
+++ b/client/src/app/+merchant/my/my.component.css
@@ -1,8 +1,18 @@
 .my-container {
+    outline: 0;
+    top: 0;
+    left: 0px;
+    right: 0px;
+    bottom: 48px;
+    margin-left: 0;
+    margin-right: 0;    
+    position: absolute;
+    overflow: auto;
     background-color: #f5f5f5;    
 }
 .user-info {
   padding-top:5px;
+  margin: 0;
 }
 .profile-img {
     width: 75px;
@@ -19,7 +29,7 @@
 .one {
     color:#333;
     display: inline-block;
-    width: 22%;
+    width: 25%;
     z-index: 2;
     padding-top: 2px;
     vertical-align: top;
@@ -63,6 +73,7 @@
 ul {  
     list-style: none;  
     padding: 0px;
+    margin: 0;
 }   
 .menuitem {
     min-height: 120px;
