--- a/client/src/app/+merchant/product/product-create.component.css
+++ b/client/src/app/+merchant/product/product-create.component.css
@@ -1,18 +1,13 @@
-.row {
-    display: block;
-}
-.inline.row{
-    display: flex;
-}
 .create-container {
-    margin-right: -0.9375rem;
-    margin-left: -0.9375rem;
-    padding-left:5px;
-    padding-right:5px;
+    top: 0;
+    left: 0px;
+    right: 0px;
+    bottom: 50px;
+    position: absolute;
+    overflow: auto;
 }
 .tab-container {
     padding: 10px 5px 0 10px;
-    margin-bottom: 45px;
 }
 .info-form .submit {
     padding-bottom: 45px;
@@ -27,7 +22,13 @@
 }
 .upload-container {
     margin-top: 10px;
-}　
+}
+.upload-container .card {
+    border: none;
+}
+.upload-container .card-block i {
+    padding-right: 10px;
+}
 img {
     width: 100%;
 }
