--- a/client/src/app/+merchant/product/product-create.component.html
+++ b/client/src/app/+merchant/product/product-create.component.html
@@ -4,77 +4,76 @@
             <template md-tab-label>商品信息</template>
             <template md-tab-content>
                 <form class="info-form tab-container" [formGroup]="form" (submit)="onSubmit($event)">
-                    <div class="form-group row">
-                        <label class="col-sm-2 form-control-label">名称</label>
-                        <div class="col-sm-10">
+                    <div class="form-group">
+                        <label>名称</label>
+                        <div>
                             <input type="text" class="form-control" placeholder="商品名称" formControlName="name">
                             <control-messages [control]="form.controls.name"></control-messages>
                             <small *ngIf="form.controls.name.pristine">长度2-20个字符</small>
                         </div>
                     </div>
-                    <div class="form-group row">
-                        <label class="col-sm-2 form-control-label">价格</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" placeholder="商品价格" formControlName="unitPrice">
+                    <div class="form-group">
+                        <label>价格</label>
+                        <div>
+                            <input type="number" class="form-control" placeholder="商品价格" formControlName="unitPrice">
                             <control-messages [control]="form.controls.unitPrice"></control-messages>
                         </div>
                     </div>
-                    <div class="form-group row">
-                        <label class="col-sm-2 form-control-label">商品描述</label>
-                        <div class="col-sm-10">
+                    <div class="form-group">
+                        <label>商品描述</label>
+                        <div>
                             <textarea class="form-control" rows="2" placeholder="商品描述" formControlName="description"></textarea>
                             <control-messages [control]="form.controls.description"></control-messages>
                             <small *ngIf="form.controls.description.pristine">长度4-255个字符</small>
                         </div>
                     </div>
-                    <div class="form-group inline row">
-                        <label class="col-xs-6 form-control-label">无限库存</label>
-                        <div class="col-xs-6 text-xs-right">
+                    <div class="form-group">
+                        <label>商品准备时长(分)</label>
+                        <div>
+                            <input type="number" class="form-control" formControlName="takeTimeLimit">
+                            <control-messages [control]="form.controls.takeTimeLimit"></control-messages>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-xs-8 col-form-label pt20">无限库存</label>
+                        <div class="col-xs-4">
                             <md-slide-toggle color="primary" formControlName="infinite" [checked]="product.infinite" (change)="product.infinite = $event.checked">
                             </md-slide-toggle>
                         </div>
                     </div>
-                    <div *ngIf="!product.infinite" class="form-group row">
-                        <label class="col-sm-2 form-control-label">数量</label>
-                        <div class="col-sm-10">
-                            <input type="test" class="form-control" placeholder="商品数量" formControlName="unitsInStock">
+                    <div *ngIf="!product.infinite" class="form-group">
+                        <label>数量</label>
+                        <div>
+                            <input type="number" class="form-control" placeholder="商品数量" formControlName="unitsInStock">
                             <control-messages [control]="form.controls.unitsInStock"></control-messages>
                         </div>
                     </div>
-                    <div class="form-group inline row">
-                        <label class="col-xs-6 form-control-label">在线支付</label>
-                        <div class="col-xs-6 text-xs-right">
+                    <div class="form-group row">
+                        <label class="col-xs-8 col-form-label pt20">在线支付</label>
+                        <div class="col-xs-4">
                             <md-slide-toggle color="primary" formControlName="needPay" [checked]="product.needPay" (change)="product.needPay = $event.checked">
                             </md-slide-toggle>
                         </div>
                     </div>
-                    <div *ngIf="product.needPay" class="form-group row">
-                        <label class="col-sm-2 form-control-label">支付时限(分)</label>
-                        <div class="col-sm-10">
-                            <input type="test" class="form-control" formControlName="payTimeLimit">
+                    <div *ngIf="product.needPay" class="form-group">
+                        <label>支付时限(分)</label>
+                        <div>
+                            <input type="number" class="form-control" formControlName="payTimeLimit">
                             <control-messages [control]="form.controls.payTimeLimit"></control-messages>
-                            <small *ngIf="form.controls.payTimeLimit.pristine">支付时限，超过时间订单取消</small>
+                            <small *ngIf="form.controls.payTimeLimit.pristine">超过支付时间订单取消</small>
                         </div>
-                    </div>
-                    <div *ngIf="!product.needPay" class="form-group row">
-                        <label class="col-sm-2 form-control-label">取货时限(分)</label>
-                        <div class="col-sm-10">
-                            <input type="test" class="form-control" formControlName="takeTimeLimit">
-                            <control-messages [control]="form.controls.takeTimeLimit"></control-messages>
-                            <small *ngIf="form.controls.takeTimeLimit.pristine">不需要在线支付，超过取货时间订单取消</small>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-sm-2 form-control-label">状态</label>
-                        <div class="col-sm-10">
+                    </div>                    
+                    <div class="form-group">
+                        <label>状态</label>
+                        <div>
                             <select class="form-control col-sm-10" formControlName="status">
                                 <option *ngFor="let s of status;" [value]="s">{{s}}</option>
                             </select>
                         </div>
                     </div>
-                    <div class="form-group row">
-                        <label class="col-sm-2 form-control-label">商品分类</label>
-                        <div class="col-sm-10">
+                    <div class="form-group">
+                        <label>商品分类</label>
+                        <div>
                             <select class="form-control col-sm-10" formControlName="category">
                                  <option value='' ></option> 
                                  <option *ngFor="let c of categorys;" [ngValue]="c">{{c.name}}</option>
@@ -93,8 +92,8 @@
                 <div class="upload-container" *ngIf="isCreated">
                     <div class="card text-xs-center">
                         <div class="card-block">
-                            <label class="btn btn-default btn-primary">
-                                  文件上传 <input type="file" ng2FileSelect [uploader]="uploader" style="display: none;">
+                            <label class="btn btn-default btn-success">
+                                  <i class="fa fa-picture-o"></i>选择商品图片<input type="file" ng2FileSelect [uploader]="uploader" style="display: none;">
                                 </label>
                         </div>
                         <div *ngFor="let item of uploader.queue">
