--- a/client/src/app/+merchant/product/product-create.component.html
+++ b/client/src/app/+merchant/product/product-create.component.html
@@ -125,7 +125,7 @@
         <md-tab>
             <template md-tab-label>预览</template>
             <template md-tab-content>
-                <div class="tab-container">
+                <div class="tab-container preview">
                     <div class="card text-xs-center">
                         <img *ngIf="product.imageSource" class="card-img-top" [src]="imageUrl">
                         <div class="card-block">
