--- a/client/src/app/+merchant/account/account.component.css
+++ b/client/src/app/+merchant/account/account.component.css
@@ -1,15 +1,20 @@
 .account-container {
-    position: relative;
-    margin-bottom: 45px;
-}
-.row {
-    display: block;
+    outline: 0;
+    top: 0;
+    left: 0px;
+    right: 0px;
+    bottom: 45px;
+    margin-left: 0;
+    margin-right: 0;    
+    position: absolute;
+    overflow: auto;
 }
 .table-container {
     margin-top: 10px;
 }
 .table-btns{
     position: relative;
+    padding-top: 5px;
     height: 50px;
 }
 .table-btns button{
@@ -20,12 +25,12 @@
     background-color: #0275d8;
 }
 .query-pane {
-    position: absolute;
+    position: fixed;
     top: 50px;
-    right: -0.9375rem;
-    left: -0.9375rem;
-    background:#f5f5f5;
-    z-index: 1000; 
+    right: 0;
+    left: 0;
+    background: #f5f5f5;
+    z-index: 1000;
 }
 .query-pane form {
     padding: 20px 20px 5px 20px;
