--- a/client/src/app/+merchant/account/account.component.html
+++ b/client/src/app/+merchant/account/account.component.html
@@ -1,11 +1,15 @@
-<div class="account-container">    
+<div class="account-container container">
     <div class="row">
-        <div class="table-container">
+        <div class="col-xs-12">
             <div class="table-btns">
-              <button md-mini-fab color="myprimary" (click)="openQuery($event)">
+                <button md-mini-fab color="myprimary" (click)="openQuery($event)">
                  <md-icon fontSet="fa" fontIcon="fa-search"></md-icon>
               </button>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
             <table class="table">
                 <tbody>
                     <tr>
@@ -19,25 +23,25 @@
                 </tbody>
             </table>
         </div>
-        <div class="query-pane" *ngIf="openQueryPanel">
-            <form [formGroup]="form" (ngSubmit)="onSubmit()">
-                <div class="form-group row">
-                    <label class="col-sm-2 form-control-label">开始日期</label>
-                    <div class="col-sm-10">
-                        <input type="date" formControlName="beginDate" (change)="changeBeginDate($event)"/>
-                    </div>
+    </div>
+    <div class="query-pane" *ngIf="openQueryPanel">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+            <div class="form-group row">
+                <label class="col-sm-2 form-control-label">开始日期</label>
+                <div class="col-sm-10">
+                    <input type="date" formControlName="beginDate" (change)="changeBeginDate($event)" />
                 </div>
-                <div class="form-group row">
-                    <label class="col-sm-2 form-control-label">结束日期</label>
-                    <div class="col-sm-10">
-                        <input type="date" formControlName="endDate" (change)="changeEndDate($event)"/>
-                    </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 form-control-label">结束日期</label>
+                <div class="col-sm-10">
+                    <input type="date" formControlName="endDate" (change)="changeEndDate($event)" />
                 </div>
-                <div class="form-group submit">
-                    <button type="submit" class="btn btn-submit btn-block">完&nbsp;成</button>
-                </div>
-            </form>
-        </div>
+            </div>
+            <div class="form-group submit">
+                <button type="submit" class="btn btn-submit btn-block">完&nbsp;成</button>
+            </div>
+        </form>
     </div>
     <ng2-slim-loading-bar></ng2-slim-loading-bar>
 </div>
