--- a/client/src/app/+merchant/cart/cart.component.css
+++ b/client/src/app/+merchant/cart/cart.component.css
@@ -1,3 +1,16 @@
+.message-container {
+    font: 12px/1.5 "Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB",\5FAE\8F6F\96C5\9ED1,tahoma,simsun,sans-serif;
+    color: #333;
+    outline: 0;
+    top: 0;
+    left: 0px;
+    right: 0px;
+    margin-left: 0;
+    margin-right: 0;    
+    position: absolute;
+    overflow: auto;
+}
+
 .header {
     min-height: 45px;
     background-color: #23b7e5;
@@ -88,7 +101,7 @@
     display: none!important;
 }
 .notification-body {
-    padding: 0 0 0 3px;
+    padding: 5px 0 0 0;
     margin: 0;
     list-style: none;
 }
@@ -139,7 +152,6 @@
 }
 .note {  
     padding: 12px 2px 0px 2px;
-    font-size: 14px;
     line-height: 15px;
 }
 .note > span:first-child {
@@ -153,8 +165,6 @@
 table {
     margin-top: 10px;
     margin-bottom: 0px;
-    background-color: #f5f5f5;
-    border: 1px solid #e3e3e3;
 }
 .table-fixed {
   table-layout: fixed;
