--- a/client/src/app/+merchant/cart/cart.component.html
+++ b/client/src/app/+merchant/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class="message-container">
+<div class="message-container container">
     <div class="header row">
         <ul class="nav navbar-nav header-btn-group pull-right">
             <li class="btn-header" (click)="refresh()">
@@ -15,7 +15,7 @@
             </div>
             <button type="submit" class="hidden btn btn-default">Submit</button>
         </form>
-        <div class="header-title"><span>商品订单</span></div>
+        <div class="header-title"><span>当日待取货订单</span></div>
     </div>
     <div class="list-container">
         <ul class="notification-body" *ngFor="let cart of cartPage.content">
