--- a/client/src/app/+merchant/category/category-create.component.css
+++ b/client/src/app/+merchant/category/category-create.component.css
@@ -1,11 +1,8 @@
 .create-container {
-    padding-top:10px;
+    padding-top: 10px
 }
 .btn-submit {
     background: #4cc05f;
     color: #fff;
     font-size: 16px;
-}
-.row {
-	display: block!important;
 }
