--- a/client/src/app/+merchant/hiscart/hiscart.component.css
+++ b/client/src/app/+merchant/hiscart/hiscart.component.css
@@ -1,26 +1,34 @@
+.hiscart-container {
+    font: 12px/1.5 "Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB",\5FAE\8F6F\96C5\9ED1,tahoma,simsun,sans-serif;
+    color: #333;
+    outline: 0;
+    top: 0;
+    left: 0px;
+    right: 0px;
+    bottom: 50px;
+    margin-left: 0;
+    margin-right: 0;    
+    position: absolute;
+    overflow: auto;
+}
 .table-btns{
     position: relative;
+    padding-top: 5px;
     height: 50px;
 }
 .table-btns button{
     position: absolute;
     right: 10px;  
-    top:10px;
 }
-
-.wrapper {
-    margin-bottom: 45px;
-    position: relative;
-}
-.query-pane {
+.query-panel {
     position: absolute;
-    top: 55px;
-    right: 0;
+    top: 50px;
     left: 0;
-    background:#f5f5f5;
-    z-index: 1000; 
+    right: 0;
+    background: #fff;
+    z-index: 1000;
 }
-.query-pane form {
+.query-panel form {
     padding: 20px 20px 5px 20px;
 }
 .btn-submit {
@@ -29,7 +37,7 @@
     font-size: 16px;
 }
 .notification-body {
-    padding: 0 0 0 3px;
+    padding: 0 0 10px 0;
     margin: 0;
     list-style: none;
 }
@@ -91,8 +99,6 @@
 table {
     margin-top: 10px;
     margin-bottom: 0px;
-    background-color: #f5f5f5;
-    border: 1px solid #e3e3e3;
 }
 .table-fixed {
   table-layout: fixed;
