--- a/client/src/app/+merchant/opentime/opentime.component.css
+++ b/client/src/app/+merchant/opentime/opentime.component.css
@@ -1,5 +1,12 @@
 .opentime-container {
-    margin-bottom: 65px;
+    outline: 0;
+    top: 0;
+    left: 0px;
+    right: 0px;
+    margin-left: 0;
+    margin-right: 0;    
+    position: absolute;
+    overflow: auto;
 }
 .table-btns{
     position: relative;
