--- a/client/src/app/+merchant/modifyimage/modify-image.component.html
+++ b/client/src/app/+merchant/modifyimage/modify-image.component.html
@@ -10,7 +10,7 @@
             <div class="card-block">
                 <h4 class="card-title">商户图像上传</h4>
                 <p class="card-text">{{item.file.name}}</p>
-                <p class="card-text">{{item.file.size/1024/1024 | number:'.2-2'}}MB</p>
+                <p class="card-text">{{item.file.size/1024/1024 | numberFormatPipe}}MB</p>
             </div>
             <div class="card-block">
                 <progress class="progress progress-success" [value]="item.progress" [max]="100"><b>{{item.progress}}%</b></progress>
