--- a/client/src/app/+merchant/product/product-create.component.html
+++ b/client/src/app/+merchant/product/product-create.component.html
@@ -100,7 +100,7 @@
                             <div class="card-block">
                                 <h4 class="card-title">商品图片上传</h4>
                                 <p class="card-text">{{item.file.name}}</p>
-                                <p class="card-text">{{item.file.size/1024/1024 | number:'.2-2'}}MB</p>
+                                <p class="card-text">{{item.file.size/1024/1024 | numberFormatPipe}}MB</p>
                             </div>
                             <div class="card-block">
                                 <progress class="progress progress-success" [value]="item.progress" [max]="100"><b>{{item.progress}}%</b></progress>
